# bevy-agent-feedback-plugin

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/models/AlienCake/: README.md
clients/python/: bevy_feedback.py
clients/typescript/: bevy_feedback.ts
docs/: ci-linux.md
examples/: README.md  agent_driven.rs  minimal.rs
scripts/: check-file-length.sh  check-skill-bundle.sh  verify-release.sh  verify-rendered-agent-feedback.sh
skills/driving-bevy-games/: PROTOCOL.md  SKILL.md  bevy_feedback.py  drive.py
src/: client.rs  config.rs  control.rs  diagnostics.rs  key_names.rs  lib.rs  protocol.rs  runtime.rs  session.rs
src/client/: diagnostics.rs  image_assertions.rs  protocol_file.rs  tests.rs  timing.rs
src/control/: capture.rs  commands.rs  timing.rs
src/diagnostics/: predicates.rs  targets.rs  tests.rs
src/protocol/: commands.rs  discovery.rs  tests.rs
src/protocol/commands/: validation.rs
src/protocol/tests/: discovery.rs  serialization.rs
tests/: alien_cake_addict.rs  capture_metadata.rs  client_transcript.rs  controls.rs  diagnostic_predicates.rs  fixed_timestep_input.rs  physics_in_fixed_timestep.rs  semantic_target.rs  skill_workflow.rs  stable_pattern.rs  test_python_client_helpers.py  test_typescript_client_helpers.ts  time_control.rs  update_input.rs
tests/controls_support/: mod.rs
tests/fixtures/: skill_workflow_driver.py
tests/semantic_target_support/: mod.rs
tests/support/: mod.rs
tests/time_control_support/: mod.rs
