[package]
name = "bevy-agent-feedback-plugin"
version = "0.2.1"
edition = "2024"
description = "Bevy plugin for Pi/Codex-driven input and screenshot feedback."
readme = "README.md"
documentation = "https://docs.rs/bevy-agent-feedback-plugin"
repository = "https://github.com/drsh4dow/bevy-agent-feedback-plugin"
keywords = ["bevy", "agent", "automation", "testing"]
categories = ["development-tools::testing", "game-development"]
license = "MIT"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
  "bevy_render",
  "bevy_window",
  "keyboard",
  "mouse",
  "png",
  "serialize",
  "std",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"

[features]
default = []
diagnostics = ["bevy/bevy_state"]

[dev-dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["3d", "ui"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
